# polls-service

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  seed.json
api/v1/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
polls/: models.py
polls/migrations/: 0001_initial.py
